<resources>
    <string name="app_name">AgomaStudio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ConfirmDetele">Confirm Delete</string>
    <string name="DeleteMessage">Are you sure want to Delete this?</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="photo">Photo</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="event">Event</string>
    <string name="help">Help</string>
    <string name="service">Service</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="main_objective">Main Objective</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="history">History</string>
    <string name="status">Status</string>
    <string name="ngo_name">NGO Name</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="logout">Logout</string>
    <string name="oku_list">OKU List</string>
    <string name="agoma_studio_one_stop_info_center_for_oku">Agoma Studio One Stop Info Center for OKU</string>
    <string name="provider_register">Provider Register</string>
    <string name="oku_register">OKU Register</string>
    <string name="login">Login</string>
    <string name="user_register">User Register</string>
    <string name="confirm">Confirm</string>
    <string name="end_help">Confirm End Help</string>
    <string name="end_message">If the Help End cannot change, confirm to end?</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>

</resources>