<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/profileProviderFragment"
        android:checkable="true"
        android:title="@string/profile" />

    <item
        android:id="@+id/addProviderFragment"
        android:checkable="true"
        android:title="@string/profile" />

    <item
        android:id="@+id/providerEventFragment"
        android:checkable="true"
        android:title="@string/event" />

    <item
        android:id="@+id/providerHelpFragment"
        android:checkable="true"
        android:title="@string/help" />

    <item
        android:id="@+id/providerServiceFragment"
        android:checkable="true"
        android:title="@string/service" />

    <item
        android:id="@+id/Logout"
        android:title="@string/logout"/>
</menu>