<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvNAme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="@+id/tvNAme"
                app:layout_constraintTop_toBottomOf="@+id/tvNAme"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:text="@string/date"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/time"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/edName"
                app:layout_constraintTop_toBottomOf="@+id/edName" />

            <Button
                android:id="@+id/EdDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/select_date"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/edTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                app:layout_constraintBottom_toBottomOf="@+id/EdDate"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/EdDate" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="@+id/EdDate"
                app:layout_constraintTop_toBottomOf="@+id/EdDate" />

            <Spinner
                android:id="@+id/spinCategory"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:minHeight="48dp"
                android:entries="@array/EventCategories"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@+id/spinCategory"
                app:layout_constraintTop_toBottomOf="@+id/spinCategory" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/photo"
                app:layout_constraintStart_toStartOf="@+id/edadd"
                app:layout_constraintTop_toBottomOf="@+id/edadd" />

            <ImageView
                android:id="@+id/imageEvent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/photo"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Address"
                app:layout_constraintStart_toStartOf="@+id/edtDescription"
                app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

            <EditText
                android:id="@+id/edadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/tvAddress"
                app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Update"
                app:layout_constraintStart_toStartOf="@+id/imageEvent"
                app:layout_constraintTop_toBottomOf="@+id/imageEvent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>